--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Mac
-*.DS_Store
+.DS_Store
 ._*
 
 # Windows
-Thumbs.db
 Desktop.ini
+Thumbs.db
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
